# anime-adventure-lab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  INTEGRATION_TARGET.md  INTEGRATION_TEST_STATUS.md  MOCK_MODE_STATUS.md  Makefile  PHASE1_MERGE_LOG.md  PHASE2_MERGE_LOG.md  README.md  STORY_DRIVEN_INTEGRATION.md  STORY_INTEGRATION_STATUS.md  TESTING_MODES.md  TEST_RESULTS_SUMMARY.md  TURN_FIX_STATUS.md  alembic.ini  dev.sh  docker-compose.batch.yml  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.remote.yml  docker-compose.yml  docker-compose.yml.bak.pre-merge  index.html  package.json  pyproject.toml  pytest.ini  requirements-docker.txt  requirements-no-torch.txt  requirements-test.txt  requirements.txt  run_local.sh  setup.sh  start.sh  test_engine_directly.py  test_turn_debug.py  test_turn_simple.py  (+1 more)
api/: __init__.py  dependencies.py  jwt_tokens.py  main.py  middleware.py  problem.py  schemas.py  security.py  session_auth.py  t2i_cost.py  t2i_tokens.py  train_access.py  ws_tickets.py
assets/: NewStoryForm-BD9WCcs6.js  RecentMemories-CHkAGUDE.js  SessionList-CVIYXN7U.js  StoryGameScreen-CEmPdkzO.js  client-CtlI1YkZ.js  index-Bj8MD2E4.js  index-msYu2s1e.css  label-C0xiogTC.js
configs/: agent.yaml  app.yaml  celery.yaml  game_persona.json  llm_models.yaml  models.yaml  performance.yaml  rag.yaml  runtime_presets.yaml  t2i_vram.yaml  vlm.yaml
core/: __init__.py  config.py  exceptions.py  model_registry.py  performance.py  shared_cache.py
demo-app/: index.html  package.json
docker/: Dockerfile.frontend  nginx.conf  (+12 more)
(+551 files in other folders)
